--- a/Facebook/app/src/main/res/layout/activity_add_message_board.xml
+++ b/Facebook/app/src/main/res/layout/activity_add_message_board.xml
@@ -35,6 +35,7 @@
     </LinearLayout>
 
     <EditText
+        android:textSize="30dp"
         android:id="@+id/edit_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
