--- a/Facebook/app/src/main/res/layout/activity_create_account_2.xml
+++ b/Facebook/app/src/main/res/layout/activity_create_account_2.xml
@@ -22,33 +22,23 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editText3"
-            android:layout_width="0dp"
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:hint="1994"
-            android:inputType="textPersonName" />
+            android:layout_weight="1" />
 
-        <EditText
-            android:id="@+id/editText4"
-            android:layout_width="0dp"
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:hint="1"
-            android:inputType="textPersonName" />
+            android:layout_weight="1" />
 
-        <EditText
-            android:id="@+id/editText5"
-            android:layout_width="0dp"
+        <Spinner
+            android:id="@+id/spinner3"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:hint="28"
-            android:inputType="textPersonName" />
-
+            android:layout_weight="1" />
     </LinearLayout>
 
     <ImageButton
