--- a/Facebook/app/src/main/res/layout/activity_create_account_4.xml
+++ b/Facebook/app/src/main/res/layout/activity_create_account_4.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
