--- a/Facebook/app/src/main/res/layout/activity_create_account_5.xml
+++ b/Facebook/app/src/main/res/layout/activity_create_account_5.xml
@@ -8,44 +8,30 @@
     tools:context=".CreateAccountActivity_5">
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="전화번호와 비밀번호를 기억해두세요"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="비밀번호 지정"
         android:textSize="20dp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView5"
+    <EditText
+        android:id="@+id/pw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="전화번호"
-        android:textSize="10dp" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="비밀번호"
-        android:textSize="10dp" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_margin="10dp"
+        android:ems="10"
+        android:hint="비밀번호"
+        android:inputType="phone" />
 
     <ImageButton
-        android:id="@+id/confirm"
+        android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="0dp"
-        app:srcCompat="@drawable/d" />
+        app:srcCompat="@drawable/c" />
+
 </LinearLayout>
