--- a/Facebook/app/src/main/res/layout/activity_login.xml
+++ b/Facebook/app/src/main/res/layout/activity_login.xml
@@ -17,26 +17,26 @@
     </LinearLayout>
 
     <LinearLayout
-        android:gravity = "center"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/id"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:ems="10"
             android:hint="전화번호 또는 이메일 주소"
-            android:inputType="textPersonName"
-            android:layout_margin="10dp"/>
+            android:inputType="textPersonName" />
 
         <EditText
-            android:layout_margin="10dp"
-            android:id="@+id/editText2"
+            android:id="@+id/pw"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:ems="10"
             android:hint="비밀번호"
             android:inputType="textPassword" />
@@ -52,15 +52,15 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:gravity="center"
-            android:text="또는"
-            android:layout_margin="20dp"/>
+            android:text="또는" />
 
         <ImageButton
-            android:padding="0dp"
-            android:id="@+id/imageButton"
+            android:id="@+id/create_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="0dp"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/a" />
     </LinearLayout>
