--- a/Facebook/app/src/main/res/layout/activity_my_profile.xml
+++ b/Facebook/app/src/main/res/layout/activity_my_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyProfileActivity">
+    tools:context=".fragment.MyProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
                 android:layout_height="200dp"
                 app:srcCompat="@android:color/background_dark" />
 
-            <com.hojune.facebook.CircleImageView
+            <com.hojune.facebook.custom.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile"
                 android:layout_width="96dp"
@@ -40,11 +40,11 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="TextView"
+                android:text="양호준"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -60,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
+                android:layout_marginBottom="20dp"
                 android:text="+ 소개 추가" />
 
             <TextView
@@ -78,7 +79,8 @@
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="연애 중" />
+                android:text="연애 중"
+                android:layout_marginBottom="20dp"/>
 
             <LinearLayout
                 android:id="@+id/think"
@@ -86,19 +88,18 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <com.hojune.facebook.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                <com.hojune.facebook.custom.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/e" />
 
-                <TextView
-                    android:id="@+id/textView15"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="20dp"
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:text="무슨 생각을 하고 계신가요?" />
+                    app:srcCompat="@drawable/g"
+                    android:layout_marginBottom="20dp"/>
 
             </LinearLayout>
 
@@ -106,12 +107,18 @@
                 android:id="@+id/textView16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
                 android:text="게시물" />
 
             <ListView
                 android:id="@+id/listview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:divider="@android:color/darker_gray"
+                android:dividerHeight="20dp" />
+
+
 
 
         </LinearLayout>
