--- a/Facebook/app/src/main/res/layout/activity_my_profile.xml
+++ b/Facebook/app/src/main/res/layout/activity_my_profile.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".fragment.MyProfileFragment">
 
     <LinearLayout
@@ -21,22 +21,21 @@
                 android:layout_height="200dp"
                 app:srcCompat="@android:color/background_dark" />
 
-            <com.hojune.facebook.custom.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <com.hojune.facebook.custom.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="150dp"
                 android:src="@drawable/e"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FFFFFFFF"/>
+                app:civ_border_color="#FFFFFFFF"
+                app:civ_border_width="2dp" />
 
         </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -79,8 +78,8 @@
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="연애 중"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginBottom="20dp"
+                android:text="연애 중" />
 
             <LinearLayout
                 android:id="@+id/think"
@@ -97,9 +96,9 @@
                     android:id="@+id/imageView"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/g"
-                    android:layout_marginBottom="20dp"/>
+                    app:srcCompat="@drawable/g" />
 
             </LinearLayout>
 
@@ -117,8 +116,6 @@
                 android:layout_height="wrap_content"
                 android:divider="@android:color/darker_gray"
                 android:dividerHeight="20dp" />
-
-
 
 
         </LinearLayout>
