--- a/Facebook/app/src/main/res/layout/activity_add_timeline.xml
+++ b/Facebook/app/src/main/res/layout/activity_add_timeline.xml
@@ -58,6 +58,12 @@
         android:scrollHorizontally="false"
         android:textSize="30dp" />
 
+    <ImageView
+        android:id="@+id/galley_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:srcCompat="@tools:sample/avatars" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -73,7 +79,7 @@
             android:textStyle="bold" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/call_gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp"
