--- a/Facebook/app/src/main/res/layout/activity_friend_profile.xml
+++ b/Facebook/app/src/main/res/layout/activity_friend_profile.xml
@@ -19,12 +19,11 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView3"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                app:srcCompat="@android:color/background_dark" />
+                android:layout_height="200dp" />
 
-            <com.hojune.facebook.custom.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <com.hojune.facebook.custom.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
@@ -33,6 +32,14 @@
                 android:src="@drawable/e"
                 app:civ_border_color="#FFFFFFFF"
                 app:civ_border_width="2dp" />
+
+            <ImageView
+                android:layout_marginTop="30dp"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/imageView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/yy" />
 
         </FrameLayout>
 
@@ -53,6 +60,19 @@
                     android:text="text"
                     android:textSize="20dp"
                     android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/add_friend"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:layout_gravity="center"
+                        app:srcCompat="@drawable/friend" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -109,13 +129,19 @@
                         android:text="text" />
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView16"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:gravity="center"
-                    android:text="게시물" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:gravity="center"
+                        android:text="게시물" />
+                </LinearLayout>
 
                 <ListView
                     android:id="@+id/fragment_listview"
