--- a/Facebook/app/src/main/res/layout/activity_my_profile.xml
+++ b/Facebook/app/src/main/res/layout/activity_my_profile.xml
@@ -19,20 +19,27 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/profile_background"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                app:srcCompat="@android:color/background_dark" />
+                android:background="#232937" />
 
-            <com.hojune.facebook.custom.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <com.hojune.facebook.custom.CircleImageView
                 android:id="@+id/profile"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
+                android:layout_width="260dp"
+                android:layout_height="260dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="150dp"
+                android:layout_marginTop="80dp"
                 android:src="@drawable/e"
                 app:civ_border_color="#FFFFFFFF"
-                app:civ_border_width="2dp" />
+                app:civ_border_width="6dp" />
+
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/imageView7"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/hg" />
 
         </FrameLayout>
 
@@ -50,8 +57,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="양호준"
-                    android:textSize="20dp"
+                    android:textColor="#aaaaaa"
+                    android:text="Text"
+                    android:textSize="40dp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -68,6 +76,26 @@
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginBottom="20dp"
                     android:text="+ 소개 추가" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/friendlist"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        app:srcCompat="@drawable/h" />
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="친구 목록" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -131,8 +159,8 @@
                     android:orientation="horizontal">
 
                     <com.hojune.facebook.custom.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:src="@drawable/e" />
 
                     <ImageView
@@ -158,7 +186,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:divider="@android:color/darker_gray"
-                    android:dividerHeight="20dp" />
+                    android:dividerHeight="10dp" />
 
 
             </LinearLayout>
