--- a/Facebook/app/src/main/res/values/colors.xml
+++ b/Facebook/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#3b5998</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="faceBook">#375dbc</color>
+    <color name="faceBook">#3b5998</color>
     <color name="white">#FFFFFF</color>
+    <color name="profile_background">#232937</color>
 </resources>
