Zeplin 디자인 50% 적용, 로그아웃하고 다시 로그인 했을 때 발생하는 타임라인 버그 fix, 게시글 추가 액티비티의 상태바부분 NoActionBar로 대체, 게시글 삭제적용

--- a/Facebook/app/src/main/res/layout/activity_login.xml
+++ b/Facebook/app/src/main/res/layout/activity_login.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".activity.LoginActivity">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/facebook_login"
-        android:orientation="vertical"
-        android:layout_weight="1">
-
-    </LinearLayout>
+        android:layout_height="362dp"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/login_banner" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="match_parent"
+        android:layout_marginTop="150dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -27,7 +24,6 @@
             android:id="@+id/id"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:ems="10"
             android:hint="전화번호 또는 이메일 주소"
             android:inputType="textPersonName" />
@@ -36,33 +32,33 @@
             android:id="@+id/pw"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:ems="10"
             android:hint="비밀번호"
             android:inputType="textPassword" />
 
-        <ImageButton
+        <Button
             android:id="@+id/login"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:padding="0dp"
-            app:srcCompat="@drawable/b" />
+            android:background="@color/junglebook"
+            android:text="로그인"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:gravity="center"
-            android:text="또는" />
+            android:textColor="#587848"
+            android:text="비밀번호를 잊으셨나요?" />
 
-        <ImageButton
+        <Button
+            android:textSize="11sp"
+            android:textColor="#848484"
             android:id="@+id/create_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/a" />
+            android:text="새 Junglebook 계정만들기" />
     </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
