--- a/Facebook/app/src/main/res/layout/activity_main.xml
+++ b/Facebook/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".activity.MainActivity">
 
-    <LinearLayout
-        android:id="@+id/other_space"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
+        <!--tools:context=".activity.MainActivity">-->
+
+        <LinearLayout
+            android:id="@+id/other_space"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        </android.support.v4.view.ViewPager>
-    </LinearLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <!--<LinearLayout
+            </android.support.v4.view.ViewPager>
+        </LinearLayout>
+
+        <!--<LinearLayout
         android:id="@+id/delete_space"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -44,4 +53,5 @@
     </LinearLayout>-->
 
 
-</LinearLayout>
+    </LinearLayout>
+</FrameLayout>
