--- a/Facebook/app/src/main/res/values/styles.xml
+++ b/Facebook/app/src/main/res/values/styles.xml
@@ -3,9 +3,16 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/faceBook</item>
+        <item name="colorPrimary">@color/junglebook</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+        <!-- 아래 스타일을 추가해 준다 -->
+        <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+            <item name="android:windowBackground">@drawable/background_splash</item>
+        </style>
+
+
 
 </resources>
